[~] Modificado volumen mínimo para calcular los puntos sogueridos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -82,8 +82,11 @@
               Dadas las dimensiones de la sala, en este apartado se sugerirá,
               de forma aleatoria, una terna de puntos para realizar las mediciones
               del tiempo de reverberación cumpliendo con la distancia mínima.
+            </p>
+            <p class="description-text">
               Se obtendrán 4 posiciones diferentes de la fuente con 3 posiciones
-              posibles en las que colocar los micrófonos.
+              posibles en las que colocar los micrófonos. Las dimensiones mínimas
+              que acepta el recinto son de 5x5x5 m.
               Esta herramienta ha sido diseñada cumpliendo la normativa UNE-ISO 3382.
             </p>
             <br>
@@ -254,10 +257,12 @@
                 <p>
                   Sugiere una serie de puntos de medición en la cuales colocar la fuente sonora
                   y el micrófono cumpliendo con los criterios de distancia mínima.
-                </p>
-                <p>
                   El usuario podrá escoger entre la terna dada según la precisión que desee.
                 </p>
+                <p>
+                  Recuerde que las dimensiones mínimas del recinto deben ser de 5x5x5 m
+                  para realizar el cálculo.
+                <p>
               </div>
             </details>
             <button class="calculate-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
