[~] Arreglo de enlace.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -205,7 +205,7 @@
 
             <div id="minDistanceMsg"></div>
 
-            <button class="calculate-button" onclick="getGetMinDistance('t')"><a href="#minDistance">calcular distancia mínima</a></button>
+            <button class="calculate-button" onclick="getGetMinDistance('t')"><a>calcular distancia mínima</a></button>
 
             <div id="dimFuente">
               <h4>Posición de la fuente</h4>
@@ -238,8 +238,7 @@
                 <span class="focus-border"></span>
               </div>
             </div>
-
-            <button class="calculate-button" onclick="optionGetAndDrawMinDistance('t', 'xs', 'ys', 'zs','xm', 'ym', 'zm')"><a href="#minDistance">comprobar punto de medición</a></button>
+            <a href="#minDistance"><button class="calculate-button" onclick="optionGetAndDrawMinDistance('t', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">comprobar punto de medición</button></a>
           </div>
         </div>
       </div>
