[~] Mejora herramienta sugerencia de puntos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -200,7 +200,7 @@
               <div class="in-box">
                 <input  id="t" class="info-input" placeholder="Tiempo reverberación [s]">
                 <span class="focus-border"></span>
-                <button class="obatain-button" onclick="obtainValueRT('t')"><a>guardar valor</a></button>
+                <!-- <button class="obatain-button" onclick="obtainValueRT('t')"><a>guardar valor</a></button> -->
               </div>
             </div>
 
@@ -258,7 +258,7 @@
                   <p>
                 </div>
               </details>
-              <button class="calculate-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
+              <button class="menu-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
               <div id="suggested-list"></div>
             </div>
             <div class="empty"></div>
