[~] Arregolo de disancia sugerida.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -101,7 +101,7 @@
             <br>
             <ol class="description-numeration">
               <li>Dimensiones de la sala, en metros.</li>
-              <li>Coeficientes de abasorción de las superficies de la sala: techo, suelo y paredes.</li>
+              <li>Coeficientes de absorción de las superficies de la sala: techo, suelo y paredes.</li>
             </ol>
           </ul>
           <br>
@@ -268,32 +268,6 @@
 
       <div id="mark-suggested"></div>
 
-      <!-- <div id="suggestedPoints">
-        <h3 class="content-title">Propuesta de puntos de medición</h3>
-        <div class="contenedor-principal">
-          <div class="suggested-display">
-            <details class="info-area">
-              <summary>i</summary>
-              <div>
-                <h2>Propuesta de puntos de medición</h2>
-                <p>
-                  Sugiere una serie de puntos de medición en la cuales colocar la fuente sonora
-                  y el micrófono cumpliendo con los criterios de distancia mínima.
-                  El usuario podrá escoger entre la terna dada según la precisión que desee.
-                </p>
-                <p>
-                  Recuerde que las dimensiones mínimas del recinto deben ser de 5x5x5 m
-                  para realizar el cálculo.
-                <p>
-              </div>
-            </details>
-            <button class="calculate-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
-            <div id="suggested-list"></div>
-            <div class="empty"></div>
-          </div>
-        </div>
-      </div> -->
-
       <div id="mark-reverberation"></div>
 
       <div id="reverTime" onload="plotOctavesGraphEmpty()">
@@ -327,15 +301,15 @@
               <div id="coefRecinto">
                 <h4>Coeficientes de absorción</h4>
                 <div class="in-box">
-                  <input id="coef_techo" class="info-input" placeholder="Coef. abs. Techo">
+                  <input id="coef_techo" class="info-input" placeholder="Coeficiente absorción Techo">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_suelo" class="info-input" placeholder="Coef. abs. Suelo">
+                  <input  id="coef_suelo" class="info-input" placeholder="Coeficiente absorción Suelo">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared" class="info-input" placeholder="Coef. abs. Pared 1">
+                  <input  id="coef_pared" class="info-input" placeholder="Coeficiente absorción Pared">
                   <span class="focus-border"></span>
                 </div>
               </div>
