[~] Modificación comentario de ayuda base de datos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -456,14 +456,16 @@
       <h3 class="content-title">Tablas de materiales</h3>
       <div class="contenedor-principal">
         <div class="in-box">
-          <details class="info-area">
+          <details class="info-area info-material">
             <summary>i</summary>
             <div>
               <h2>Lista de materiales</h2>
               <p>
-                Consulta diferentes materiales para el traramiento acústico en recintos.
-                Se pueden realizar búsquedas en función del coeficiente de absorción sonora
-                medio o por el nombre del material.
+                En esta herramienta pueden ser consultados diferentes materiales
+                para el uso en traramientos acústicos de recintos.<br><br>
+                Las búsquedas pueden realizarse en función del nombre de material,
+                así como por su NRC (Noise Reduction Coeficient) o por su α medio (Coeficiente
+                de Absorción Medio).
               </p>
             </div>
           </details>
