[~] Arreglo cálculo tiempo de reverberación.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -55,7 +55,7 @@
       <div class="contenedor-principal">
         <div class="description">
           <p>
-            Bienvenid@ a <b>Acustic-Lab</b>, una herramienta online con la que podrás realizar
+            Bienvenid@ a <b>ACOUSTIC MULTI-TOOL</b>, una herramienta online con la que podrás realizar
             tus comprobaciones en tiempo real.
           </p>
           <br>
@@ -332,7 +332,7 @@
                 <h4>Coeficientes de absorción por bandas de octava</h4>
                 <table class="octaves-table">
                     <thead>
-                      <tr class="table-body">
+                      <tr>
                         <th></th>
                         <th>125Hz</th>
                         <th>250Hz</th>
@@ -343,7 +343,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="table-body">
+                      <tr>
                         <td>Paredes</td>
                         <td>
                           <input id="pared_125" class="coef-input" placeholder="" />
@@ -370,7 +370,7 @@
                           <span class="focus-border"></span>
                         </td>
                       </tr>
-                      <tr class="table-body">
+                      <tr>
                         <td>Techo</td>
                         <td>
                           <input id="techo_125" class="coef-input" placeholder="" />
@@ -397,7 +397,7 @@
                           <span class="focus-border"></span>
                         </td>
                       </tr>
-                      <tr class="table-body">
+                      <tr>
                         <td>Suelo</td>
                         <td>
                           <input id="suelo_125" class="coef-input" placeholder="" />
