--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -264,7 +264,7 @@
               </details>
               <button class="menu-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
               <div id="suggested-list"></div>
-              <div id="shroeder-list"></div>
+              <div id="info-suggested-list"></div>
             </div>
             <div class="empty"></div>
           </div>
