[~] Modificación rangos de puntos sugeridos.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -257,8 +257,8 @@
                     y el micrófono cumpliendo con los criterios de distancia mínima.
                     El usuario podrá escoger entre la terna dada según la precisión que desee.
                   <br><br>
-                    Recuerde que las dimensiones mínimas del recinto deben ser de 5x5x5 m
-                    para realizar el cálculo.
+                    Recuerde que las dimensiones mínimas del recinto deben ser de 2.5x2.5x2.5 m
+                    para poder realizar un cálculo que cumpla con la normativa UNE-ISO 3382.
                   <p>
                 </div>
               </details>
