--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -280,7 +280,7 @@
         <div class="contenedor-principal">
           <div align="center">
             <button class="menu-button rever" onclick="displayService(event, 'reverberation-time', 'normal')">Tiempo de reverberación</button>
-            <button class="menu-button rever" onclick="displayService(event, 'reverberation-time', 'octaves')">Tiempo de reverberación por octavas</button>
+            <button class="menu-button rever" onclick="displayService(event, 'reverberation-time', 'octaves')">Tiempo de reverberación en octavas</button>
           </div>
           <div id="normal" class="reverberation-time">
             <div class="rever-display">
@@ -322,8 +322,8 @@
             <div class="empty"></div>
             <div id="putTR"></div>
             <div align="center">
-              <button class="calculate-button" onclick="optionGetReverberationTime('Sabine',
-                'coef_techo','coef_suelo','coef_pared')">calcular tiempo de reverberación</button>
+              <button class="calculate-button" onclick="optionGetReverberationTime('coef_techo',
+              'coef_suelo','coef_pared')">calcular tiempo de reverberación</button>
             </div>
           </div>
           <div id="octaves" class="reverberation-time">
@@ -430,7 +430,7 @@
               </div>
               <div align="center">
                 <a href="#mark-list-octaves">
-                  <button class="calculate-button" onclick="optionGetReverberationTimeOctaves('Sabine',
+                  <button class="calculate-button" onclick="optionGetReverberationTimeOctaves(
                   'pared_125','pared_250','pared_500','pared_1000','pared_2000','pared_4000',
                   'suelo_125','suelo_250','suelo_500','suelo_1000','suelo_2000','suelo_4000',
                   'techo_125','techo_250','techo_500','techo_1000','techo_2000','techo_4000')"
@@ -2877,7 +2877,7 @@
                 <td></td>
                 <td></td>
                 <td>0.71</td>
-                <td>#­DIV/0!</td>
+                <td>-</td>
               </tr>
               <tr class="table-body">
                 <td>Lana de vidrio</td>
@@ -2892,7 +2892,7 @@
                 <td></td>
                 <td></td>
                 <td>0.85</td>
-                <td>#­DIV/0!</td>
+                <td>-</td>
               </tr>
               <tr class="table-body">
                 <td>Lana de vidrio</td>
